<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".ui.login.LoginActivity">

  <include
      android:id="@+id/toolbar_login"
      layout="@layout/app_toolbar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:id="@+id/scrollView2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fillViewport="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login">

      <TextView
          android:id="@+id/tv_login_title"
          style="@style/BlackTextStyle.Size24"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="40dp"
          android:text="@string/label_login_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/tv_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="100dp"
          android:text="@string/label_username"
          android:textAllCaps="true"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

      <EditText
          android:id="@+id/et_username"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="4dp"
          android:layout_marginEnd="20dp"
          android:hint="@string/hint_enter_username"
          android:inputType="textPersonName"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@+id/tv_username"
          app:layout_constraintTop_toBottomOf="@+id/tv_username" />

      <TextView
          android:id="@+id/tv_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="40dp"
          android:text="@string/label_password"
          android:textAllCaps="true"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_username" />

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/constraintLayout2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="4dp"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@+id/tv_password"
          app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_show_hide_password"
            style="@style/LightGreenTextStyle.Size12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_show"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
          android:id="@+id/tv_forget_password"
          style="@style/BlackTextStyle.Size12"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/label_forget_password"
          app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
          app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/constraintLayout"
          android:layout_width="0dp"
          android:layout_height="80dp"
          android:layout_marginTop="100dp"
          android:background="@color/colorWhite"
          android:elevation="4dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
          app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_login"
            style="@style/PrimaryWhiteButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:stateListAnimator="@null"
            android:text="@string/label_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>